--- a/project1/pom.xml
+++ b/project1/pom.xml
@@ -15,13 +15,19 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-<distributionManagement>
-  <repository>
-     <id>releases</id>
-    <url>http://192.168.80.129:8080/nexus-2.11.4-01/content/repositories/releases</url>
-  </repository>
-</distributionManagement>
   <build>
     <finalName>project1</finalName>
   </build>
+<distributionManagement>
+    <repository>
+         <id>Nexus1</id>
+         <name>Release Repository</name>
+         <url>http://localhost:8080/nexus-2.11.4-01/content/repositories/releases/</url>
+    </repository>
+    <snapshotRepository>
+         <id>Nexus1</id>
+         <name>Snapshot Repository</name>
+         <url>http://localhost:8080/nexus-2.11.4-01/content/repositories/snapshots/</url>
+    </snapshotRepository>
+</distributionManagement>
 </project>
