--- a/project1/pom.xml
+++ b/project1/pom.xml
@@ -20,13 +20,13 @@
   </build>
 <distributionManagement>
     <repository>
-         <id>Nexus1</id>
-         <name>Release Repository</name>
+         <id>releases</id>
+         <name>Releases</name>
          <url>http://localhost:8080/nexus-2.11.4-01/content/repositories/releases/</url>
     </repository>
     <snapshotRepository>
-         <id>Nexus1</id>
-         <name>Snapshot Repository</name>
+         <id>snapshots</id>
+         <name>Snapshots</name>
          <url>http://localhost:8080/nexus-2.11.4-01/content/repositories/snapshots/</url>
     </snapshotRepository>
 </distributionManagement>
