--- a/project1/pom.xml
+++ b/project1/pom.xml
@@ -4,7 +4,7 @@
   <groupId>dhanunjay.rahul</groupId>
   <artifactId>project1</artifactId>
   <packaging>war</packaging>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <name>project1 Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
