--- a/project1/Jenkinsfile
+++ b/project1/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Compile') {
             steps {
-            withMaven(maven : 'maven3.3.9'){
+            maven(maven : 'maven3.3.9'){
               sh 'mvn clean compile'
                 echo 'Compiling.'
                 }
@@ -12,7 +12,7 @@ pipeline {
         }
        stage('Testing') {
             steps {
-            withMaven(maven : 'maven3.3.9'){
+            maven(maven : 'maven3.3.9'){
               sh 'mvn test'
                 echo 'Testing..'
                 }
@@ -20,7 +20,7 @@ pipeline {
         }
        stage('Deploy') {
             steps {
-            withMaven(maven : 'maven3.3.9'){
+            maven(maven : 'maven3.3.9'){
               sh 'mvn deploy'
                 echo 'Building..'
                 }
