--- a/project1/Jenkinsfile
+++ b/project1/Jenkinsfile
@@ -1,30 +1,33 @@
 pipeline {
-    agent any
+    agent master
+    tools{
+     maven 'maven3.3.9'   
+    }
 
     stages {
         stage('Compile') {
             steps {
-            maven(maven : 'maven3.3.9'){
+            
               sh 'mvn clean compile'
                 echo 'Compiling.'
                 }
-            }
+           
         }
        stage('Testing') {
             steps {
-            maven(maven : 'maven3.3.9'){
+            
               sh 'mvn test'
                 echo 'Testing..'
                 }
-            }
+           
         }
        stage('Deploy') {
             steps {
-            maven(maven : 'maven3.3.9'){
+           
               sh 'mvn deploy'
                 echo 'Building..'
                 }
-            }
+          
         }
     }
 }
