--- a/project1/Jenkinsfile
+++ b/project1/Jenkinsfile
@@ -7,6 +7,11 @@ pipeline {
     }
 
     stages {
+        stage('preparation') {
+            git '
+           
+        }
+        
         stage('Compile') {
             steps {
             
