--- a/project1/Jenkinsfile
+++ b/project1/Jenkinsfile
@@ -7,8 +7,8 @@ pipeline {
     }
 
     stages {
-        stage('preparation') {
-            git 'https://github.com/dhanu629/wardeploy/tree/master/project1'
+        stage('Preparation') {
+            git 'https://github.com/dhanu629/wardeploy/tree/master/project1.git'
            
         }
         
